# user-notify

./: Cargo.toml  Readme.md
examples/: Info.plist  README.md  build_and_sign.sh  check_notification_settings.sh  quick_test.sh  test.rs
examples/test_active_notifications/: Cargo.toml
examples/test_active_notifications/src/: main.rs
examples/test_basic_notification/: Cargo.toml
examples/test_basic_notification/src/: main.rs
examples/test_full_integration/: Cargo.toml
examples/test_full_integration/src/: main.rs
examples/test_interactive_notification/: Cargo.toml
examples/test_interactive_notification/src/: main.rs
examples/test_permission_request/: Cargo.toml
examples/test_permission_request/src/: main.rs
src/: notification.rs
src/platform_impl/: windows.rs
src/platform_impl/mac_os/: builder.rs
tests/: integration_tests.rs
