[package]
name = "test_full_integration"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "test_full_integration"
path = "src/main.rs"

[dependencies]
user-notify = { path = "../../" }
tokio = { version = "1.0", features = ["full"] }
env_logger = "0.10"
log = "0.4"
anyhow = "1.0"
chrono = { version = "0.4", features = ["serde"] } 